# kaprekar-crate

./: Cargo.toml  README.md  kaprekar.rs  main  main.rs
src/: kaprekar.rs  lib.rs  main.rs  test.rs
