[package]
name = "kaprekar"
version = "0.1.0"
edition = "2021"
description = ""
license = "MIT"
license-file = ""
documentation = ""
homepage = "https://github.com/DeeterCesler/kaprekar-crate"
repository = "https://github.com/DeeterCesler/kaprekar-crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "kaprekar"
path = "main.rs"
