[package]
name = "kaprekar"
version = "0.1.1"
edition = "2021"
description = "Include a function to find number of iterations to reach Kaprekar's constant."
license = "MIT"
documentation = "https://github.com/DeeterCesler/kaprekar-crate"
homepage = "https://github.com/DeeterCesler/kaprekar-crate"
repository = "https://github.com/DeeterCesler/kaprekar-crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "kaprekar"
path = "src/lib.rs"
